# sfc

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.py  sfcConfig.cmake.in
.github/workflows/: cmake-single-platform.yml
cmake/: Config.cmake  Lib.cmake
include/sfc/: Sequence.hpp  ctpl_stl.h
include/sfc/step/: Macro.hpp  Step.hpp
include/sfc/step/action/: StepAction.hpp
include/sfc/transition/: Receptivity.hpp  Transition.hpp
src/sfc/: Sequence.cpp
src/sfc/step/: Macro.cpp  Step.cpp
src/sfc/step/action/: StepAction.cpp
src/sfc/transition/: Receptivity.cpp  Transition.cpp
unit-tests/: SfcTest.h  main.cpp
unit-tests/sfc/: DummyStepAction.hpp  SfcTests.h
